<resources>
    <string name="inicio">Inicio</string>
    <string name="app_name">CRAI-RA UQ</string>
    <string name="texto_informacion">CRAI-RA UQ</string>
    <string name="espere">espere</string>
    <string name="cargando_contenido">Cargando Contenido</string>
    <string name="autor_2">by Sebastián Agudelo</string>
    <string name="creada_anio">Biblioteca C.R.A.I - Universidad del Quindío, 2018</string>
    <string name="Catalogo_biblioteca">Catálogo Biblioteca</string>
    <string name="actualizar_página_principal">Actualizar</string>
    <string name="salir">Salir</string>
    <string name="Localizar_Libro">Localizar Libro</string>
    <string name="Paseo_virtual">Recorrido virtual</string>
    <string name="Acerca_de">Acerca de</string>
    <string name="Copiar_enlace">Copiar enlace</string>
    <string name="ver_en_el_navegador">Ver en el navegador</string>
    <string name="codigo_libro_a_buscar">705.5</string>
    <string name="boton_buscar_libro">Buscar</string>
    <string name="localizar_libro">Localizar Libro</string>
    <string name="saludo_bienvenida">Bienvenido a la aplicación móvil CRAI-RA UQ</string>
    <string name="alerta_conexion_internet">No tienes conexión a internet. Para disfrutar de todas las características de la aplicación conéctate a internet.</string>
    <string name="alerta_conexion">No tienes conexión a internet.</string>
    <string name="mensaje_error_localizar_libros">Ingrese un código válido</string>
    <string name="mensaje_exito_localizar_libros">Su búsqueda fue exitosa</string>
    <string name="info">Como dependencia la Biblioteca C.R.A.I tenemos la función de proveer, desarrollar recursos y servicios de información para la comunidad UNIQUINDIANA contribuyendo a su desarrollo personal, académico e investigativo.</string>
    <string name="mensaje_texto_copiado">Copiado al Portapapeles</string>
    <string name="version">Versión 1.3 </string>
    <string name="comentarios">Comentarios</string>
    <string name="catalogo">Catálogo</string>
    <string name="localizar">Localizar</string>
    <string name="youtube">Sigue nuestro canal</string>
    <string name="whats">Escríbenos</string>
    <string name="db">Base de datos</string>
    <string name="ecotic">Ecotic</string>
    <string name="escanear">Escanea los códigos QR</string>
</resources>

