<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_opcion_1"
            android:icon="@drawable/pageview"
            android:title="@string/Catalogo_biblioteca" />
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ubicacion"
            android:title="@string/Localizar_Libro" />

        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/paseo_virtual"
            android:title="@string/Paseo_virtual" />

    </group>
    <item
        android:id="@+id/navigation_atajos"
        android:title="Atajos">
        <menu>
            <item
                android:id="@+id/atajos_1"
                android:icon="@drawable/ic_storage_black_24dp"
                android:title="@string/db" />
            <item
                android:id="@+id/atajos_2"
                android:icon="@drawable/ic_local_florist_black_24dp"
                android:title="@string/ecotic" />
        </menu>
    </item>
    <item
        android:id="@+id/navigation_social"
        android:title="Redes sociales">
        <menu>
            <item
                android:id="@+id/social_1"
                android:icon="@drawable/youtube"
                android:title="@string/youtube" />
            <item
                android:id="@+id/social_2"
                android:icon="@drawable/whatsapp"
                android:title="@string/whats" />
           </menu>
    </item>
    <item
        android:id="@+id/navigation_subheader"
        android:title="Más opciones">
        <menu>
            <item
                android:id="@+id/menu_seccion_3"
                android:icon="@drawable/acerca_de"
                android:title="@string/Acerca_de" />
            <item
                android:id="@+id/menu_opcion_4"
                android:icon="@drawable/feedback"
                android:title="@string/comentarios" />
            <item
                android:id="@+id/menu_opcion_3"
                android:icon="@drawable/close"
                android:title="@string/salir" />

        </menu>
    </item>



</menu>